crates/ruff_linter/src/message/snapshots/ruff_linter__message__text__tests__default.snap
---
source: crates/ruff_linter/src/message/text.rs
expression: content
---
/projects/project/fib.py:1:8: F401 `os` imported but unused
  |
1 | import os
  |        ^^ F401
  |
  = help: Remove unused import: `os`

/projects/project/fib.py:6:5: F841 Local variable `x` is assigned to but never used
  |
4 | def fibonacci(n):
5 |     """Compute the nth number in the Fibonacci sequence."""
6 |     x = 1
  |     ^ F841
7 |     if n == 0:
8 |         return 0
  |
  = help: Remove assignment to unused variable `x`

/projects/project/undef.py:1:4: F821 Undefined name `a`
  |
1 | if a == 1: pass
  |    ^ F821
  |
