crates/ruff_linter/src/message/snapshots/ruff_linter__message__text__tests__empty_span_after_line_terminator.snap
---
source: crates/ruff_linter/src/message/text.rs
expression: value.to_string()
---
error[no-indented-block]: Expected an indented block
  --> E11.py:9:1
   |
 7 | #: E112
 8 | if False:
 9 | print()
   | ^
10 | #: E113
11 | print()
   |

error[invalid-syntax]: SyntaxError: Expected an indented block after `if` statement
  --> E11.py:9:1
   |
 7 | #: E112
 8 | if False:
 9 | print()
   | ^^^^^
10 | #: E113
11 | print()
   |

error[invalid-syntax]: SyntaxError: Unexpected indentation
  --> E11.py:12:1
   |
10 | #: E113
11 | print()
12 |     print()
   | ^^^^
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   |

error[invalid-syntax]: SyntaxError: Expected a statement
  --> E11.py:14:1
   |
12 |     print()
13 | #: E114 E116
14 | mimetype = 'application/x-directory'
   | ^
15 |      # 'httpd/unix-directory'
16 | create_date = False
   |

error[no-indented-block]: Expected an indented block
  --> E11.py:45:1
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^
46 | #:
47 | if False:
   |

error[invalid-syntax]: SyntaxError: Expected an indented block after `if` statement
  --> E11.py:45:1
   |
43 | #: E112
44 | if False:  #
45 | print()
   | ^^^^^
46 | #:
47 | if False:
   |
