crates/ruff_linter/src/message/snapshots/ruff_linter__message__text__tests__fix_status.snap
---
source: crates/ruff_linter/src/message/text.rs
expression: content
---
[F401]: `os` imported but unused
 --> fib.py:1:8
  |
1 | import os
  |        ^^ Remove unused import: `os`
  |

[F841]: Local variable `x` is assigned to but never used
 --> fib.py:6:5
  |
4 | def fibonacci(n):
5 |     """Compute the nth number in the Fibonacci sequence."""
6 |     x = 1
  |     ^ Remove assignment to unused variable `x`
7 |     if n == 0:
8 |         return 0
  |

[F821]: Undefined name `a`
 --> undef.py:1:4
  |
1 | if a == 1: pass
  |    ^
  |
