crates/ruff_linter/src/message/snapshots/ruff_linter__message__text__tests__notebook_output.snap
---
source: crates/ruff_linter/src/message/text.rs
expression: content
---
[F401]: [*] `os` imported but unused
 --> notebook.ipynb:2:8
  |
1 | # cell 1
2 | import os
  |        ^^ Remove unused import: `os`
3 | # cell 2
4 | import math
  |

[F401]: [*] `math` imported but unused
 --> notebook.ipynb:4:8
  |
2 | import os
3 | # cell 2
4 | import math
  |        ^^^^ Remove unused import: `math`
5 |
6 | print('hello world')
  |

[F841]: [*] Local variable `x` is assigned to but never used
  --> notebook.ipynb:10:5
   |
 8 | def foo():
 9 |     print()
10 |     x = 1
   |     ^ Remove assignment to unused variable `x`
   |
