crates/ruff_linter/src/message/snapshots/ruff_linter__message__text__tests__syntax_errors.snap
---
source: crates/ruff_linter/src/message/text.rs
expression: content
---
SyntaxError: Expected one or more symbol names after import
 --> syntax_errors.py:1:15
  |
1 | from os import
  |               ^
2 |
3 | if call(foo
  |

SyntaxError: Expected ')', found newline
 --> syntax_errors.py:3:12
  |
1 | from os import
2 |
3 | if call(foo
  |            ^
4 |     def bar():
5 |         pass
  |
